--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "keywords": [
-    "node"
+    "node",
+    "typescript"
   ],
-  "author": "Xavier Guzman <sx.guzman@hotmail.com>",
+  "author": "Xavier G. <sx.guzman@hotmail.com>",
   "scripts": {
     "dev": "NODE_ENV=development && nodemon",
     "start": "npm run build && node dist/app.js",
-    "lint": "eslint --ignore-path .gitignore . --ext .js,.ts",
+    "lint": "eslint --ignore-path .gitignore .",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
@@ -20,8 +21,8 @@
     "test:features": "npm run test:features:backoffice:backend",
     "test:features:backoffice:backend": "NODE_ENV=test cucumber-js -p backoffice_backend",
     "build": "npm run build:clean && npm run build:next",
-    "build:clean": "rimraf ./dist",
-    "build:next": "tsc",
+    "build:clean": "rimraf ./dist; exit 0",
+    "build:next": "tsc -p tsconfig.prod.json",
     "prepare": "husky",
     "commit": "commit"
   },
@@ -49,38 +50,37 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@commitlint/prompt-cli": "^19.1.0",
     "@cucumber/cucumber": "^10.3.1",
+    "@faker-js/faker": "^8.4.0",
+    "@types/compression": "^1.7.5",
+    "@types/convict": "^6.1.6",
     "@types/cucumber": "^7.0.0",
+    "@types/errorhandler": "^1.5.3",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.1",
+    "nodemon": "^3.0.3",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5",
-    "@faker-js/faker": "^8.4.0",
-    "@types/compression": "^1.7.5",
-    "@types/convict": "^6.1.6",
-    "@types/errorhandler": "^1.5.3",
-    "@types/express": "^4.17.21",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
-    "cross-env": "^7.0.3",
-    "eslint-config-codely": "^3.1.3",
-    "lint-staged": "^15.2.1",
-    "nodemon": "^3.0.3",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5"
   },
   "lint-staged": {
-    "*.(js|ts)": "npm run lint:fix"
+    "*.(js|ts)": "npm run format:fix && run lint:fix"
   },
   "description": "A practical e-commerce project with a strong foundation in Domain-Driven Design (DDD), Clean Architecture, and CQRS. This repository showcases how to build a robust e-commerce system while adhering to best practices.",
-  "main": "app.js",
-  "license": "ISC"
+  "main": "src/app.js",
+  "license": "MIT"
 }
