--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "outDir": "./dist",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/**.ts", "tests/**/**.ts"],
+  "include": ["src/**/**.ts", "__tests__/**/**.ts", "./**.ts", "./**.js"],
   "exclude": ["node_modules"]
 }
