--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,8 @@
     "sourceType": "module"
   },
   "rules": {
-    "no-console": "warn"
+    "no-console": "off",
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/ban-types": "off"
   }
 }
