--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "author": "Xavier G. <sx.guzman@hotmail.com>",
   "scripts": {
-    "dev": "NODE_ENV=development && nodemon",
+    "dev": "NODE_ENV=dev nodemon",
     "start": "npm run build && node dist/app.js",
     "lint": "eslint --ignore-path .gitignore .",
     "lint:fix": "npm run lint -- --fix",
